Implementamos navegación del listado de películas al detalle de películas optimizando las queries SQL con un JOIN

--- a/src/movies/templates/home.html
+++ b/src/movies/templates/home.html
@@ -7,7 +7,9 @@
 <body>
     <h1>Welcome to IPDB!</h1>
     {% for movie in movies %}
-        <img src="{{ movie.image }}" alt="{{ movie.title }}" title="{{ movie.titles }}" height="300" >
+        <a href="{% url 'movie_detail_page' movie.pk%}" title="{{ movie.title }}">
+            <img src="{{ movie.image }}" alt="{{ movie.title }}" title="{{ movie.titles }}" height="300" >
+        </a>
     {% endfor %}
 </body>
 </html>
