Cargamos CSS en nuestro web

--- a/src/movies/templates/home.html
+++ b/src/movies/templates/home.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>IPDB: Internet Pelis Database</title>
-</head>
-<body>
+{%  extends "base.html" %}
+
+{%  block content %}
+
     <h1>Welcome to IPDB!</h1>
     {% for movie in movies %}
         <a href="{% url 'movie_detail_page' movie.pk%}" title="{{ movie.title }}">
             <img src="{{ movie.image }}" alt="{{ movie.title }}" title="{{ movie.titles }}" height="300" >
         </a>
     {% endfor %}
-</body>
-</html>
+    
+{% endblock %}
