--- a/src/movies/templates/movie_detail.html
+++ b/src/movies/templates/movie_detail.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ movie.title }}</title>
-</head>
-<body>
+{%  extends "base.html" %}
+
+{% block head_title %} {{ movie.title }} {% endblock %}
+{% block content %}
 
     <h1>{{ movie.title }}</h1>
     <img src="{{ movie.image }}" alt="{{ movie.title }}" title="{{ movie.title }}" width="300">
@@ -23,5 +20,5 @@
             <strong>Release date:</strong>{{ movie.release_date | date:"d/m/Y" }}
         </li>
     </ul>
-</body>
-</html>
+
+{% endblock %}
