--- a/src/movies/templates/base.html
+++ b/src/movies/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="menu">
-        <a href="{% url "home_page" %}">Home2</a>
+        <a href="{% url "home_page" %}">Home</a>
         <hr>
     </div>
     {% block content %}{% endblock %}
