--- a/src/users/templates/login_form.html
+++ b/src/users/templates/login_form.html
@@ -11,16 +11,9 @@
         {% endfor %}
     {% endif %}
 
-    <form method="post">
+    <form method="post" novalidate>
     {% csrf_token %}<!-- Protección formularios contra CSRF:  Cross-site request forgery -->
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" name="login_username" id="username" value="" placeholder="Type here your username">
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" name="login_password" id="password" value="" placeholder="Type here your password">
-        </div>
+        {{ form.as_p }}
         <div>
             <button type="submit">Login</button>
         </div>
