--- a/src/movies/templates/base.html
+++ b/src/movies/templates/base.html
@@ -10,6 +10,7 @@
     <div class="menu">
         <a href="{% url "home_page" %}">Home</a> |
         {% if user.is_authenticated %}
+            <a href="{% url "create_movie_page" %}">New movie</a> |
             <a href="{%  url "logout_page" %}">Logout</a>
         {% else %}
             <a href="{%  url "login_page" %}">Login</a>
