--- a/src/movies/templates/my_movies.html
+++ b/src/movies/templates/my_movies.html
@@ -3,11 +3,8 @@
 {% block head_title %} My movies {% endblock %}
 
 {% block content %}
+    <h1>My movies</h1>
 
-    <ul>
-        {% for movie in object_list %}
-            <li>{{ movie.title }}</li>
-        {% endfor %}
-    </ul>
+    {% include "movies_list.html" with movies=object_list %}
 
 {% endblock %}
